<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.maksymuimanov</groupId>
    <artifactId>jpyxie-parent</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>
    <name>JPyxie Parent</name>
    <description>Parent module for managing all submodules of JPyxie.</description>
    <url>https://github.com/maksymuimanov/jpyxie</url>
    <licenses>
        <license>
            <name>The MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Maksym Uimanov</name>
            <email>uimanovmaks@gmail.com</email>
        </developer>
    </developers>
    <scm>
        <url>https://github.com/maksymuimanov/jpyxie</url>
        <connection>scm:git:git://github.com/maksymuimanov/jpyxie.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:maksymuimanov/jpyxie.git</developerConnection>
    </scm>
    <modules>
        <module>common/jpyxie-common</module>

        <module>core/jpyxie-core</module>
        <module>core/jpyxie-spring-boot-autoconfigure</module>
        <module>core/jpyxie-spring-boot-starter</module>

        <module>bind/jpyxie-bind</module>
        <module>bind/jpyxie-bind-spring-boot-autoconfigure</module>
        <module>bind/jpyxie-bind-spring-boot-starter</module>

        <module>javython/jpyxie-javython</module>
        <module>javython/jpyxie-javython-spring-boot-autoconfigure</module>
        <module>javython/jpyxie-javython-spring-boot-starter</module>

        <module>spelython/jpyxie-spelython</module>
        <module>spelython/jpyxie-spelython-spring-boot-autoconfigure</module>
        <module>spelython/jpyxie-spelython-spring-boot-starter</module>

        <module>rest/jpyxie-rest-core</module>
        <module>rest/jpyxie-rest-spring-boot-autoconfigure</module>
        <module>rest/jpyxie-rest-spring-boot-starter</module>
        <module>rest/jpyxie-rest-testcontainers</module>

        <module>grpc/jpyxie-grpc-core</module>
        <module>grpc/jpyxie-grpc-spring-boot-autoconfigure</module>
        <module>grpc/jpyxie-grpc-spring-boot-starter</module>
        <module>grpc/jpyxie-grpc-testcontainers</module>

        <module>process/jpyxie-process-core</module>
        <module>process/jpyxie-process-spring-boot-autoconfigure</module>
        <module>process/jpyxie-process-spring-boot-starter</module>

        <module>jep/jpyxie-jep-core</module>
        <module>jep/jpyxie-jep-spring-boot-autoconfigure</module>
        <module>jep/jpyxie-jep-spring-boot-starter</module>

        <module>jython/jpyxie-jython-core</module>
        <module>jython/jpyxie-jython-spring-boot-autoconfigure</module>
        <module>jython/jpyxie-jython-spring-boot-starter</module>

        <module>graalpy/jpyxie-graalpy-core</module>
        <module>graalpy/jpyxie-graalpy-spring-boot-autoconfigure</module>
        <module>graalpy/jpyxie-graalpy-spring-boot-starter</module>

        <module>actuator/jpyxie-actuator-spring-boot-core</module>
        <module>actuator/jpyxie-actuator-spring-boot-autoconfigure</module>
        <module>actuator/jpyxie-actuator-spring-boot-starter</module>

        <module>metrics/jpyxie-micrometer-core</module>
        <module>metrics/jpyxie-micrometer-spring-boot-autoconfigure</module>
        <module>metrics/jpyxie-micrometer-spring-boot-starter</module>

        <module>bom/jpyxie-bom</module>
    </modules>
    <properties>
        <java.version>17</java.version>
        <jspecify.version>1.0.0</jspecify.version>
        <jetbrains-annotations.version>26.0.2-1</jetbrains-annotations.version>
        <spring-boot.version>3.5.3</spring-boot.version>
        <spring.version>6.2.8</spring.version>
        <jackson.version>2.19.1</jackson.version>
        <lombok.version>1.18.38</lombok.version>
        <junit.version>5.12.2</junit.version>
        <mockito.version>5.17.0</mockito.version>
        <assertj.version>3.27.7</assertj.version>
        <slf4j.version>2.0.17</slf4j.version>
        <zt-exec.version>1.12</zt-exec.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>${jspecify.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${jetbrains-annotations.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>annotationProcessor</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.5.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <failOnError>false</failOnError>
                    <additionalJOptions>
                        <additionalJOption>-Xdoclint:none</additionalJOption>
                    </additionalJOptions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>